--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,10 @@ body {
   background-color: #f1f1f1;
 }
 
+h1, h2, h3, h4 {
+  margin-top: 0;
+}
+
 .content-wrapper {
   padding: 80px 0 80px 0;
 }
@@ -20,9 +24,14 @@ body {
   float: right;
 }
 
+header {
+  background-color: #ddd;
+}
+
 footer {
   text-align: center;
   position: absolute;
   bottom: 0;
   width: 100%;
+  background-color: grey;
 }
