--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,5 @@
-body, html {
-  height: 100%;
-  max-height: 100%;
-  position: relative;
+body {
+  box-sizing: border-box;
 }
 
 body {
@@ -29,14 +27,14 @@ header {
 }
 
 footer {
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
   background-color: grey;
 }
 
 aside {
   background-color: #fff;
   padding: 10px 0 10px 10px;
+}
+
+.sidebar-posts {
+  margin-bottom: 0;
 }
