--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,26 @@ h1, h2, h3, h4 {
   margin-top: 0;
 }
 
+p {
+  line-height: 27px;
+  margin-bottom: 20px;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
 .content-wrapper {
   padding: 80px 0 80px 0;
 }
 
 .logo {
   float: left;
+}
+
+.center-block {
+  display: block;
+  margin: 0 auto;
 }
 
 .phone {
