--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,14 @@ p:last-child {
   margin: 0 auto;
 }
 
+#comment {
+  width: 100%;
+}
+
+.comment-body {
+  font-size: 18px;
+}
+
 .phone {
   float: right;
 }
