--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -59,7 +59,6 @@ $image-path: '../img/';
           border-radius: $radius;
 }
 
-
 /*--------------------------------
 1.3 REUSABLES
 --------------------------------*/
@@ -105,6 +104,10 @@ img {
   display: block;
   margin: 0 auto 30px auto;
   width: 100%;
+}
+
+hr {
+	border-top: 1px solid grey;
 }
 
 /*--------------------------------
