--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -104,6 +104,7 @@ img {
   display: block;
   margin: 0 auto 30px auto;
   width: 100%;
+  height: auto;
 }
 
 hr {
@@ -210,8 +211,13 @@ footer {
 8.0 SEARCH
 --------------------------------*/
 
+.search-results {
+  padding-left: 0;
+}
+
 .search-result {
 	margin-bottom: 20px;
+  list-style: none;
 }
 
 .search-result p {
