--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -72,6 +72,18 @@ $image-path: '../img/';
   margin: 0 auto;
 }
 
+.auto-image {
+  width: auto;
+  height: auto;
+}
+
+.social-icon {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  margin-right: 15px;
+}
+
 /*--------------------------------
 1.4 DEFAULT
 --------------------------------*/
@@ -88,10 +100,6 @@ h1, h2, h3, h4 {
 p {
   line-height: 27px;
   margin-bottom: 20px;
-}
-
-p:last-child {
-  margin-bottom: 0;
 }
 
 /* fixes horizontal overflow that sometimes happens with boostrap nested rows */
@@ -164,6 +172,20 @@ header {
 
 .phone {
   float: right;
+}
+
+/*--------------------------------
+2.0 HOME
+--------------------------------*/
+
+.bio-image {
+  width: 150px;
+  height: auto;
+  float: left;
+}
+
+.bio-title, .bio_paragraph {
+  text-align: center;
 }
 
 /*--------------------------------
