--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -59,6 +59,13 @@ $image-path: '../img/';
           border-radius: $radius;
 }
 
+@mixin transition($ease, $duration) {
+  -webkit-transition: $ease, $duration;
+     -moz-transition: $ease, $duration;
+      -ms-transition: $ease, $duration;
+          transition: $ease, $duration;
+}
+
 /*--------------------------------
 1.3 REUSABLES
 --------------------------------*/
@@ -87,6 +94,10 @@ $image-path: '../img/';
 /*--------------------------------
 1.4 DEFAULT
 --------------------------------*/
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   background-color: $cream;
@@ -117,6 +128,21 @@ img {
 
 hr {
 	border-top: 1px solid grey;
+}
+
+ul {
+  margin-bottom: 0;
+  padding: 0;
+}
+
+a {
+  @include transition(ease-out, .5s);
+}
+
+a:hover {
+  text-decoration: none;
+  color: red;
+  @include transition(ease-in, .5s);
 }
 
 /*--------------------------------
@@ -170,8 +196,72 @@ header {
   color: #fff;
 }
 
+.logo, .phone {
+  margin-bottom: 0;
+}
+
 .phone {
   float: right;
+}
+
+.main-navigation {
+  background-color: #ddd;
+  padding: 10px 0 10px 0;
+  height: 40px;
+  width: 100%;
+  position: relative;
+}
+
+.primary-nav {}
+
+.primary-nav ul {
+  text-align: center;
+}
+
+.primary-nav li {
+  display: inline-block;
+  margin-right: 20px;
+  font-size: 18px;
+}
+
+.primary-nav li:last-child{
+  margin-right: 0;
+}
+
+.hamburger {
+  background: url('#{$image-path}hamburger.png') center center no-repeat;
+}
+
+.cross {
+  background: url('#{$image-path}x.png') center center no-repeat;
+}
+
+.mobile-menu {
+  width: 100%;
+  background-color: grey;
+  height: 40px;
+  margin-top: -10px;
+  display: none;
+}
+
+.hamburger, .cross {
+  background-color: transparent;
+  background-size: contain;
+  border:none;
+  outline:0;
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  right: 10px;
+  display: none;
+}
+
+.hamburger:hover {
+  cursor: pointer;
+}
+
+.cross:hover {
+  cursor: pointer;
 }
 
 /*--------------------------------
@@ -254,6 +344,10 @@ footer {
   p:last-child {
     margin-bottom: 20px;
   }
+
+  .bio-image {
+    float:none;
+  }
 }
 
 @media screen and (max-width: 700px) {
@@ -263,5 +357,31 @@ footer {
   }
   h1, h2, h3, h4 {
     margin-bottom: 15px;
+  }
+
+  .primary-nav {
+    z-index: 1;
+    background-color: #ddd;
+    padding: 20px 0 20px 0;
+  }
+
+  .primary-nav li {
+    display: block;
+    font-size: 18px;
+    text-align: center;
+    margin-bottom: 10px;
+    width: 100%;
+  }
+
+  .main-navgation {
+    padding-bottom: 0;
+  }
+
+  .for-mobile-nav {
+    padding: 0;
+  }
+
+  .mobile-menu, .hamburger, .cross {
+    display: block;
   }
 }
